# ESP32S3-IDF-LilyGo-T-SIM7080G

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: ci_build.yaml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/lib/XPowersLib/: CMakeLists.txt
main/src/: camControl.cpp  main.cpp  main.hpp  pins.hpp
main/src/imu6500/: driver_mpu6500_dmp.c  imu_DMP6.cpp
main/src/led/: led.cpp
main/src/modem/: modem.cpp  modem.hpp  modem_ppp.cpp  modem_sendFile.cpp  modem_ssl.cpp  modemgps.cpp  modemhttps.cpp
main/src/power/: power.cpp  power.hpp
main/src/sdcard/: sdcard.cpp  sdcard.h
main/src/web_server/: web.cpp
main/src/wifi/: wifi.cpp  wifi.hpp
